[package]
name = "trapez_integrate"
version = "0.1.1"
edition = "2024"
description = "Numerical integration"
readme = "README.md"
keywords = ["dsp", "integral"]
license = "BSD-3-Clause OR Apache-2.0"
authors = ["Radzivon Bartoshyk"]
documentation = "https://github.com/awxkee/trapez_integrate"
categories = ["algorithms", "science"]
homepage = "https://github.com/awxkee/trapez_integrate"
repository = "https://github.com/awxkee/trapez_integrate"
exclude = ["*.jpg", "/assets", "*.png", "*.sh", "/assets/*"]
rust-version = "1.89.0"

[dependencies]
num-traits = "0.2.19"